IndexBuildsCoordinator fails to clean up index build when lock acquisition times out

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-07-29
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If the IndexBuildsCoordinator fails to acquire the locks for the index build, it may leave the index build, with its corresponding BackgroundOperation, in an unfinished state. This can happen when the createIndexes is invoked with a short maxTimeMS duration.

      The resulting inconsistent may affect subsequent metadata operations such as collections drops and renames that check BackgroundOperation::assertNoBgOpInProgForNs().

      This is applies only when the IndexBuildsCoordinator is enabled for the createIndexes command.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: