SERVER-42281 IndexBuildsCoordinator::_runIndexBuildInner() cleans up index build if lock acquisition fails